Changelog for Poi
=================


1.3 (unreleased)
----------------

- Polish translation
  [sargo]
  
- Compatibility with Chameleon
  [sargo]
 
- Minor fixes for i18n support
  [sargo]

- PoiIssue: there is no reason why contactEmail is mandatory
  [ajung]

- Added upgrade step to remove the local Manager role from all tracker
  managers and instead give them the TrackerManager role.
  [maurits]

- Define our permissions in zcml and configure them in rolemap.xml.
  [maurits]

- Added TrackerManager role.  Give this role to users mentioned in the
  managers field of a tracker, instead of the more powerful Manager
  role.
  [maurits]

- Removed ``skins/Poi/poi_issue_quicksearch.py`` in favour of our new
  ``@@poi_issue_quicksearch`` view.
  [maurits]

- Removed ``skins/Poi/toggleWatchingIssue.py`` in favour of our new
  ``@@toggle_watching`` view.
  [maurits]

- Removed ``skins/Poi/poi_niceName.py`` in favour of the new
  ``@@pas_member`` view from PlonePAS.
  [maurits]

- Removed ``skins/Poi/poi_issue_post.cpy`` and use an event handler on
  IObjectInitializedEvent of an issue instead.  Added upgrade step to
  remove the now unneeded form controller action for this, as it would
  otherwise give: ValueError: Unable to find poi_issue_post.
  [maurits]

- Moved fully to GenericSetup.
  [maurits]

- Added minimum versions for AddRemoveWidget and DataGridField in
  setup.py, to make sure we get versions that are compatible with
  Plone 4, and that we have an AddRemoveWidget version with a
  GenericSetup profile.
  [maurits]

- Removed old BTrees migration code for the trackers.
  [maurits]

- Use zope.i18n.translate instead the the no longer existing
  GlobalTranslationService.
  [maurits]

- Get rid of old style zope2 interfaces, which no longer exist in Zope
  2.12.
  [maurits]

- Cleaned up code that was meant for PoiResponses.  The class itself
  is still there for migration.  [maurits]


1.2.7 (2009-10-24)
------------------
