@@ -88,6 +88,9 @@ class Base(BrowserView):
         items = []
         linkDetection = context.linkDetection
         for id, response in enumerate(self.folder):
+            if response is None:
+                # Has been removed.
+                continue
             # Use the already rendered response when available
             if response.rendered_text is None:
                 if response.mimetype == 'text/html':
@@ -144,12 +147,12 @@ class Base(BrowserView):
             icon = context.getIcon()
         filename = getattr(attachment, 'filename', attachment.getId())
         info = dict(
-            icon = self.portal_url + '/' + icon,
-            url = context.absolute_url() +\
+            icon=self.portal_url + '/' + icon,
+            url=context.absolute_url() +\
                 '/@@poi_response_attachment?response_id=' + str(id),
-            content_type = attachment.content_type,
-            size = pretty_size(attachment.size),
-            filename = filename,
+            content_type=attachment.content_type,
+            size=pretty_size(attachment.size),
+            filename=filename,
             )
         return info
 
@@ -368,7 +371,6 @@ class Create(Base):
         return 'additional'
 
     def __call__(self):
-        update = {}
         form = self.request.form
         context = aq_inner(self.context)
         if not self.memship.checkPermission('Poi: Add Response', context):
@@ -450,7 +452,6 @@ class Edit(Base):
     @memoize
     def response(self):
         form = self.request.form
-        context = aq_inner(self.context)
         response_id = form.get('response_id', None)
         if response_id is None:
             return None
@@ -481,6 +482,11 @@ class Save(Base):
             response_id = form.get('response_id', None)
             if response_id is None:
                 msg = _(u"No response selected for saving.")
+                msg = translate(msg, 'Poi', context=self.request)
+                status.addStatusMessage(msg, type='error')
+            elif self.folder[response_id] is None:
+                msg = _(u"Response does not exist anymore; perhaps it was "
+                        "removed by another user.")
                 msg = translate(msg, 'Poi', context=self.request)
                 status.addStatusMessage(msg, type='error')
             else:
