@@ -5,6 +5,11 @@ Changelog for Poi
 1.3 (unreleased)
 ----------------
 
+- When deleting a response, do not remove it, but set it to None.
+  This avoid problems when one user is editing a response and another
+  user is removing it.
+  [maurits]
+
 - Polish translation
   [sargo]
   
